have been working on the awards layout, have not aligned everything correctly yet

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -190,7 +190,7 @@ main {
 
 .service_m{
     font-size: 18px;
-    margin-left: 55vh;
+    margin-left: 40vh;
     color: #979797;
     font-style: 400;
     font-family: "Mulish", sans-serif;
@@ -201,7 +201,7 @@ main {
 }
 .service_c{
     font-size: 18px;
-    margin-left: 127px;
+    margin-left: 30px;
     color: #979797;
     font-style: 400;
     font-family: "Mulish", sans-serif;
@@ -209,4 +209,73 @@ main {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+}
+
+
+/*Awards section*/
+
+.container_prize{
+    display: flex;
+    flex-direction: column;
+    margin-left: 125px;
+    max-width: 1900px;
+}
+
+.container_awards{
+    border-top: 1px solid #979797;
+    margin-bottom: 20px;
+    padding: 20px;
+}
+
+.award_title {
+    font-size: 22px;
+    padding: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: $main-txt-color;
+    font-family: "Mulish", sans-serif;
+    font-optical-sizing: auto;
+}
+
+.space{
+    margin-left: 240px;
+    margin-bottom: 20px;
+}
+
+.award_item{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    gap: 200px;
+}
+
+.award_name{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: $main-txt-color;
+    font-family: "Mulish", sans-serif;
+    font-optical-sizing: auto;
+    flex-basis: 200px;
+}
+
+.award_description{
+    font-size: 16px;
+    padding-left: 20px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    color: $main-txt-color;
+    font-family: "Mulish", sans-serif;
+    font-optical-sizing: auto;
+}
+
+.award_year{
+    font-size: 16px;
+    font-weight: 400;
+    width: 80px;
+    text-align: right;
+    color: $main-txt-color;
+    font-family: "Mulish", sans-serif;
+    font-optical-sizing: auto;
 }
